syntax = "proto3";

package sdc.biceps;

option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "AbstractSetStateOperationDescriptorType";

import "sdc/biceps/abstractoperationdescriptor.proto";

message AbstractSetStateOperationDescriptor {
  AbstractOperationDescriptor abstract_operation_descriptor = 1;
  repeated string modifiable_data = 2;
}
