syntax = "proto3";

package sdc.biceps;

option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "SetMetricStateOperationStateType";

import "sdc/biceps/abstractoperationstate.proto";

message SetMetricStateOperationState {
  AbstractOperationState abstract_operation_state = 1;
}
